# ai-football-ops

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agents/: base_agent.py  devils_advocate_agent.py  manager_agent.py  performance_analytics_agent.py  report_agent.py  scout_agent.py  tactical_agent.py  transfer_market_agent.py
config/: club_config.py  settings.py
models/: agent_io.py  domain.py
prompts/: base_prompts.py  data_prompts.py  manager_prompts.py
services/: llm_client.py  logging_config.py  platform_factory.py
streamlit/: app.py
tests/: conftest.py  test_club_config.py  test_data_gateway.py  test_data_prompts.py  test_data_providers.py  test_devils_advocate_agent.py  test_injury_data.py  test_manager_agent.py  test_models.py  test_news_data.py  test_performance_analytics_agent.py  test_platform_factory.py  test_player_identity.py  test_report_agent.py  test_scout_agent.py  test_sportsapipro_providers.py  test_tactical_agent.py  test_transfer_data.py  test_transfer_market_agent.py
tools/: csv_injury_provider.py  csv_news_provider.py  csv_player_resolver.py  csv_provider.py  csv_transfer_provider.py  data_gateway.py  data_provider.py  injury_gateway.py  injury_provider.py  mock_injury_provider.py  mock_news_provider.py  mock_player_resolver.py  mock_provider.py  mock_transfer_provider.py  news_gateway.py  news_provider.py  player_identity_gateway.py  player_resolver.py  sportsapipro_client.py  sportsapipro_identity_provider.py  sportsapipro_stats_provider.py  sportsapipro_transfer_provider.py  transfer_gateway.py  (+1 more)
(+7 files in other folders)
